# cmdstan-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: translate.rs
examples/argtree-from/: main.rs
examples/bernoulli/: main.rs
examples/bernoulli-many/: main.rs
src/: argtree.rs  argument_tree.rs  base.rs  builder.rs  constants.rs  consts.rs  control.rs  diagnose.rs  error.rs  generate_quantities.rs  internal_macros.rs  laplace.rs  lib.rs  log_prob.rs  logprob.rs  main.rs  method.rs  optimize.rs  pathfinder.rs  sample.rs  stansummary.rs  translate.rs  variational.rs
src/builder-derive/: Cargo.toml
src/builder-derive/src/: lib.rs
src/parser/: argtree.pest  argtree.rs  argument_tree.pest  argument_tree.rs  base.pest  data.pest  diagnose.pest  diagnose.rs  generate_quantities.pest  generate_quantities.rs  laplace.pest  laplace.rs  log_prob.pest  log_prob.rs  logprob.pest  logprob.rs  method.pest  method.rs  mod.rs  optimize.pest  optimize.rs  output.pest  pathfinder.pest  pathfinder.rs  random.pest  sample.pest  sample.rs  variational.pest  variational.rs
src/translate-derive/: Cargo.toml
src/translate-derive/src/: lib.rs
