[package]
name = "cmdstan"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Radcliffe <andrewjradcliffe@gmail.com>"]
description = "Rust interface for CmdStan"
repository = "https://github.com/andrewjradcliffe/cmdstan-rs/"
license = "BSD 3-Clause"

[dependencies]
builder-derive = { path = "src/builder-derive" }
pest = "2.7.5"
pest_derive = "2.7.5"
translate-derive = { path = "src/translate-derive" }